k8s/client-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-dep
spec:
  replicas: 2
  selector:
    matchLabels:
      component: web
  template:
    metadata: 
      labels:
        component: web
    containers:
      - image: stephengrider/multi-client
        name: multi-client
        ports:
          - containerPort: 3000
