k8s/postgres-dep.yml
apiVersion: apps/v1
metadata: 
  name: postgres-deployment
kind: Deployment
spec: 
  replicas: 1
  selector: 
    matchLabels:
      component: postgres
  template:
    metadata:
      labels: 
        component: postgres
    spec:
      containers:
        - image: postgres
          name: postgres
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              subPath: postgres
              name: postgres-volume
      volumes:
        - name: postgres-volume
          persistentVolumeClaim:
            claimName: db-persistent-volume-claim
