k8s/redis-dep.yml
apiVersion: apps/v1
metadata: 
  name: redis-deployment
kind: Deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: redis
  template:
    metadata:
      labels:
        component: redis
    spec:
      containers:
        - image: redis
          name: redis
          ports: 
            - containerPort: 6379
