k8s/server-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - image: stephengrider/multi-server
          name: multi-server
          ports: 
            - containerPort: 5000
