k8s/worker-dep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector: 
    matchLabels:
      component: worker
  template:
    metadata: 
      labels:
        component: worker
    spec: 
      containers:
        - image: stephengrider/multi-worker
          name: multi-worker
