k8s/client-cluster-ip.service.yml
apiVersion: v1
kind: Service
metadata:
  name: client-ip-cluster-service
spec: 
  selector:
    component: web
  ports:
    - port: 3000
      targetPort: 3000
