k8s/server-cluster-ip.service.yml
apiVersion: v1
kind: Service
metadata: 
  name: server-cluster-ip-service
spec:
  selector:
    component: server
  ports:
    - targetPort: 5000
      port: 5000
